--- a/beta-season.html
+++ b/beta-season.html
@@ -26,7 +26,7 @@
         <link rel="stylesheet" href="assets/css/style.css">
         <link rel="stylesheet" href="assets/css/responsive.css">
     </head>
-    <body class="bg_body"> 
+    <body class="bg_body footer_beta"> 
         <!-- 
         <div id="preloader">
             <div id="loader"></div>
@@ -77,31 +77,39 @@
                         <h2>BETA SEASON</h2>
                         <h3>WE ARE IN BETA VERSION</h3>
                         <h4>Here’s why:</h4>
-                        <div class="row">
-                            <div class="col-md-4">
-                                <div class="single_beta_img single_beta_img_top">
-                                    <img src="assets/images/beta/banner/1.png" alt="">
+                        
+                    </div>
+                </div>
+                <div class="beta_banner_imgg"> 
+                    <div class="beta_banner_content_img">
+                        <div class="container"> 
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <div class="single_beta_img single_beta_img_top">
+                                        <img src="assets/images/beta/banner/1.png" alt="">
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="col-md-4">
-                                <div class="single_beta_img">
-                                    <img src="assets/images/beta/banner/2.png" alt="">
+                                <div class="col-md-4">
+                                    <div class="single_beta_img">
+                                        <img src="assets/images/beta/banner/2.png" alt="">
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="col-md-4">
-                                <div class="single_beta_img single_beta_img_top">
-                                    <img src="assets/images/beta/banner/3.png" alt="">
+                                <div class="col-md-4">
+                                    <div class="single_beta_img single_beta_img_top">
+                                        <img src="assets/images/beta/banner/3.png" alt="">
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
+                    <div class="beta_shape_1">
+                        <img src="assets/images/beta/banner/shape1.png" alt="">
+                    </div>
+                    <div class="beta_shape_2">
+                        <img src="assets/images/beta/banner/shape2.png" alt="">
+                    </div>
                 </div>
-                <div class="beta_shape_1">
-                    <img src="assets/images/beta/banner/shape1.png" alt="">
-                </div>
-                <div class="beta_shape_2">
-                    <img src="assets/images/beta/banner/shape2.png" alt="">
-                </div>
+                
             </section> 
             <!--=====================  End Beta Banner Area  ====================--> 
 
@@ -126,8 +134,8 @@
                     </div> 
                 </div>
                 <div class="beta_alpah_box">
-                    <div class="beta_alpha_single">
-                        <div class="container"> 
+                    <div class="beta_alpha_single beta_reverse">
+                        <div class="container beta_alpha_position"> 
                             <div class="row align-items-center">
                                 <div class="col-md-6">
                                     <div class="alpha_card">
@@ -157,7 +165,7 @@
                         </div>
                     </div> 
                     <div class="beta_alpha_single">
-                        <div class="container"> 
+                        <div class="container beta_alpha_position"> 
                             <div class="row align-items-center">
                                 <div class="col-md-6">
                                     <div class="alpha_img">
@@ -166,29 +174,93 @@
                                 </div>
                                 <div class="col-md-6">
                                     <div class="alpha_card">
-                                        <h4>Alpha Season</h4>
-                                        <ul>
-                                            <li><p>Ideas and Prototypes</p></li>
-                                            <li><p>Development and Testing</p></li>
-                                            <li><p>Enhancing and Adjusting</p></li>
-                                            <li><p>Developing the Smart Contract</p></li>
-                                            <li><p>Connecting to Web3</p></li>
-                                            <li><p>Calculating the Prices</p></li> 
+                                        <h4 class="beta_card_title">Beta Season</h4>
+                                        <ul> 
+                                            <li><p>Collecting Statistics</p></li>
+                                            <li><p>Measuring and Evaluating</p></li>
+                                            <li><p>Optimizing the Metrics</p></li>
+                                            <li><p>Creation of Affiliate System </p></li>
+                                            <li><p>Adjusting the Game Content</p></li>
+                                            <li><p>Creating ideal Tokenomics</p></li>
+                                            <li><p>Rewards for the first Players</p></li> 
                                         </ul>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="alpha_shape_1">
+                        <div class="alpha_shape_2">
                             <img src="assets/images/beta/alpha/shape2.png" alt="">
+                        </div>
+                        <div class="alpha_roadmap_2">
+                            <img src="assets/images/beta/alpha/roadmap2.png" alt="">
+                        </div>
+                    </div> 
+                    <div class="beta_alpha_single beta_reverse">
+                        <div class="container beta_alpha_position"> 
+                            <div class="row align-items-center">
+                                <div class="col-md-6">
+                                    <div class="alpha_card">
+                                        <h4>Season 1</h4>
+                                        <ul> 
+                                            <li><p>First ICO</p></li>
+                                            <li><p>Intense Marketing</p></li>
+                                            <li><p>Growing the Community</p></li>
+                                            <li><p>Social Media Content Creation </p></li>
+                                            <li><p>Partnerships</p></li>
+                                            <li><p>Ecosystem Expansion</p></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="alpha_img">
+                                        <img src="assets/images/beta/alpha/3.png" alt=""> 
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="alpha_shape_1">
+                            <img src="assets/images/beta/alpha/shape3.png" alt="">
                         </div>
                         <div class="alpha_roadmap">
                             <img src="assets/images/beta/alpha/roadmap1.png" alt="">
                         </div>
                     </div> 
+                    <div class="beta_alpha_single">
+                        <div class="container beta_alpha_position"> 
+                            <div class="row align-items-center">
+                                <div class="col-md-6">
+                                    <div class="alpha_img">
+                                        <img src="assets/images/beta/alpha/4.png" alt=""> 
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="alpha_card">
+                                        <h4>Beyond...</h4>
+                                        <ul> 
+                                            <li><p>More Partnerships</p></li>
+                                            <li><p>First Exchanges</p></li> 
+                                            <li><p>Huge Exchange Cooperations</p></li> 
+                                            <li><p>Season Cooperations </p></li> 
+                                            <li><p>Updates and Maintenance</p></li> 
+                                            <li><p>Much more to be announced:</p></li> 
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="alpha_shape_2">
+                            <img src="assets/images/beta/alpha/shape3.png" alt="">
+                        </div> 
+                    </div> 
                 </div>
             </section>
-            <!--=====================  End Alpha Area  ====================-->  
+            <!--=====================  End Alpha Area  ====================--> 
+
+            <!--=====================  End Alpha Area  ====================--> 
+            <section class="cron_img_area">
+                <img src="assets/images/beta/cron/img.png" alt="">
+            </section> 
+            <!--=====================  End Alpha Area  ====================-->   
 
 
         </main>
@@ -196,6 +268,15 @@
         <!--=====================  Start Header Area  ====================-->
         <footer class="footer_area section_padding" data-aos="fade-up">
             <div class="container">
+                <div class="footer_change">
+                    <div class="become_left">
+                        <h3>Stay up to Date and be informed about all upcoming <span>Changes</span> in the Beta Season and beyond!</h3>
+                        <div class="become_btn">
+                            <a href="#" class="btn_2">Download Now <img src="assets/images/header/download.png" alt=""></a> 
+                            <a href="https://t.me/unicorntap" class="btn_1" target="_blank">Telegram<img src="assets/images/header/location.png" alt=""></a>
+                        </div>
+                    </div>
+                </div>
                 <div class="header_top">
                     <div class="row align-items-center">
                         <div class="col-md-8">
