--- a/beta-season.html
+++ b/beta-season.html
@@ -85,17 +85,17 @@
                         <div class="container"> 
                             <div class="row">
                                 <div class="col-md-4">
-                                    <div class="single_beta_img single_beta_img_top">
+                                    <div class="single_beta_img single_beta_img_top cursor_content_show_2">
                                         <img src="assets/images/beta/banner/1.png" alt="">
                                     </div>
                                 </div>
                                 <div class="col-md-4">
-                                    <div class="single_beta_img">
+                                    <div class="single_beta_img cursor_content_show_3">
                                         <img src="assets/images/beta/banner/2.png" alt="">
                                     </div>
                                 </div>
                                 <div class="col-md-4">
-                                    <div class="single_beta_img single_beta_img_top">
+                                    <div class="single_beta_img single_beta_img_top cursor_content_show_4">
                                         <img src="assets/images/beta/banner/3.png" alt="">
                                     </div>
                                 </div>
@@ -114,13 +114,42 @@
             <!--=====================  End Beta Banner Area  ====================--> 
 
             <!--=====================  Start Cursor Area  ====================--> 
-            <section class="cursor_place_area section_padding">
+            <section class="cursor_place_area">
                 <div class="container">
-                    <div class="section_title">
-                        <h2>Place your Cursor on the Object!</h2>
-                    </div>
-                    <div class="cursor_place_box">
-                        <p>Find out more about the Purpose of the Beta Season and how it helps to improve the Game and reward you! What are you waiting for? Place your Cursor on one of the Illustrations! </p>
+                    <div class="cursor_point_boxx">
+                        <div class="cursor_point_single cusro_content_1"> 
+                            <div class="section_title">
+                                <h2>Place your Cursor on the Object!</h2>
+                            </div>
+                            <div class="cursor_place_box">
+                                <p>Find out more about the Purpose of the Beta Season and how it helps to improve the Game and reward you! What are you waiting for? Place your Cursor on one of the Illustrations! </p>
+                            </div>
+                        </div>
+                        <div class="cursor_point_single cusro_content_2"> 
+                            <div class="section_title">
+                                <h2> 1) Enhancing & Optimization</h2>
+                            </div>
+                            <div class="cursor_place_box">
+                                <p>In order to provide the perfect Player Experience, we have to carry out precise Studies where we use player Activity and Behavior to make <span>Optimizations in the Game</span>. This includes item Prices, Structure, Functionality and more. But that's not the only thing that's important to us: we also want to find out what you like so that we can continue to develop the Game in this Direction!</p>
+                            </div>
+                        </div>
+                        <div class="cursor_point_single cusro_content_3"> 
+                            <div class="section_title">
+                                <h2>2) Tokenomics & Metrics</h2>
+                            </div>
+                            <div class="cursor_place_box">
+                                <p>After the Beta Season Players can exchange their Unicoins (including those earned during the Beta Season) for the current Token and contribute to the Message. They can then trade their Share after the Season, as soon as the Token has been listed. To promote the Growth of the Token on the Exchange, it is important that we <span>create the right Tokenomics</span> where the Number, Distribution and Price of the Tokens are determined. To perfect this, we use your Statistics during the Beta Season.</p>
+                            </div>
+                        </div>
+                        <div class="cursor_point_single cusro_content_4"> 
+                            <div class="section_title">
+                                <h2>3) Community & Exclusive Rewards</h2>
+                            </div>
+                            <div class="cursor_place_box">
+                                <p>During this Phase, the innermost Circle is born which includes Players who discovered and played the Game before Season 1. These are Jokoje's most valuable Friends as he can send his first Word to Planet Earth together with them. Of course he also wants to <span>reward his loyal Companions</span> and has therefore come up with a special Gift that Players can unlock after a certain Amount of Time during the Beta Season. Find out what it is and 
+                                    play UnicornTap NOW!</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section> 
