--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                                             The unicorn Jokoje has an important message for all crypto investors on earth. He shares it with us word for word in the form of new ICOs, which he sends to earth every season. Collect as many Unicoins as possible each season to help Jokoje deliver his message and in return you can benefit from his creations. Find all the details about Jokoje's new coins on the ICO page!
                                         </p>
                                         <div class="season_btn">
-                                            <a href="#" class="btn_1">Visit ICO</a>
+                                            <a href="beta-season.html" class="btn_1">Visit ICO</a>
                                             <a href="#" class="btn_2">Download Now <img src="assets/images/header/download.png" alt=""></a>
                                         </div>
                                     </div>
